feat: harden and launch production
